--- a/src/style.css
+++ b/src/style.css
@@ -120,7 +120,7 @@ section.work-experience {
 
 table {
     width: 100%;
-    border-collapse: collapse;
+    table-layout: fixed;
     border: 3px solid purple;
 }
 
